<resources>
    <string name="app_name">Wallsaver</string>
    <string name="how_to_use">
        Save external wallpapers:\n1. Open any wallpaper app of your choice.\n2.
        Tap on options like \"Use as\", \"Apply as\", \"Set With\", etc.\n3.
        Select this app from the list.\n4.
        Save the image to your desired location.\n\nSave current wallpaper:\n1. 
        Tap the extract wallpaper button below to save to your device.
    </string>
    <string name="permission_granted">Permission granted. Go back and try applying the wallpaper again. Don\'t worry, this
    will be the last time you need to do this; unless of course, you remove the permission.</string>
    <string name="permission_denied">Permission denied. In order to access the wallpapers from third party apps,
    storage permission is needed.</string>
    <string name="permission_below_tiramisu">Read Storage permission is required for proper functioning of the app. </string>
    <string name="permission_from_tiramisu">Starting from Android 13, \"Manage External Storage\" permission is required
    along with reading media images to access the wallpapers you have currently applied.</string>
    <string name="set_wallpaper">Set wallpaper</string>
    <string name="apply_wallpaper_to">Apply wallpaper to</string>
    <string name="home_screen">Home Screen</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="save_home_screen_wallpaper">Save home screen wallpaper</string>
    <string name="save_lock_screen_wallpaper">Save lock screen wallpaper</string>
    <string name="cannot_load_wallpaper">Cannot load wallpaper</string>
    <string name="cannot_load_wallpaper_desc">Lock screen wallpaper cannot be acquired. This can occur if:\n\t1. You have
    a live wallpaper applied to lock screen.\n\t2. You have same wallpaper on home screen and lock screen. In this case, you can use
        \'Save home screen wallpaper\' option.\n\t3. You are not running
    Android version 14 or above.</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>

    <!--Changelog-->
    <string name="r1.0">- Initial Release</string>
    <string name="r1.0.1">- Added new actions:\n\t- Save current Home Screen Wallpaper\n\t- Save current Lock Screen Wallpaper (requires Android 14 or above)
        \n- Added ability to apply wallpapers via app along with saving\n- New save wallpaper UI</string>
</resources>